--- a/Sunduk.PWA/Dialogs/FeedBackDialog.razor
+++ b/Sunduk.PWA/Dialogs/FeedBackDialog.razor
@@ -16,7 +16,7 @@
         <MudTextField Class="feedback-form" T="string" Label="Сообщение" Variant="Variant.Filled" @bind-Value="Message" Lines="5" Immediate="true"/>
     </DialogContent>
     <DialogActions>
-        @if (InProgress)
+        @if (Status == "Progress")
         {
             <MudProgressLinear Color="Color.Primary" Indeterminate="true" Class="mx-4" />
         }
@@ -29,11 +29,10 @@
 
     public string Name { get; set; }
     public string Message { get; set; }
-    public bool InProgress { get; set; } = false;
+    public string Status { get; set; } = "None";
 
     async void Submit()
     {
-        string status = "false";
         if (string.IsNullOrWhiteSpace(Name))
         {
             Snackbar.Add("Имя не должно быть пустым!", Severity.Error);
@@ -44,27 +43,29 @@
         }
         else
         {
-            
+            Status = "Progress";
+
             try
             {
-                InProgress = true;
-                status = await http.GetStringAsync($"https://api.sunduk.one/sendmessage|{Name}|{Message}");
-                if (status == "Ok")
+                Status = await http.GetStringAsync($"https://api.sunduk.one/sendmessage|{Name}|{Message}");
+
+                if (Status == "Ok")
                 {
                     MudDialog.Close(DialogResult.Ok(true));
                     Snackbar.Add($"Сообщение отправлено!", Severity.Success);
                 }
                 else
                 {
-                    InProgress = false;
                     Snackbar.Add($"Не удалось отправить сообщение.", Severity.Error);
                 }
             }
             catch (Exception e)
             {
-                InProgress = false;
+                Status = e.Message;
                 Snackbar.Add($"Не удалось отправить сообщение.", Severity.Error);
             }
         }
     }
+
+    
 }
