--- a/Sunduk.PWA/Dialogs/ChangelogDialog.razor
+++ b/Sunduk.PWA/Dialogs/ChangelogDialog.razor
@@ -73,6 +73,8 @@ https://github.com/dece1ver/Sunduk
         }));
         Info.Add(new ChangelogInfo(new Version(1, 0, 3, 6), new DateTime(2021, 12, 14), new string[] { 
             "Переписал фаску и радиус, добавил обратные варианты. На фаске добавил точный расчет."}));
+        Info.Add(new ChangelogInfo(new Version(1, 0, 3, 7), new DateTime(2022, 1, 15), new string[] { 
+            "Добавил обратную связь.", "Разблокировал возможность использования экспериментальных функций в релизной версии."}));
         Info.Reverse();
     }
 
