--- a/Sunduk.PWA/Pages/Knowledge.razor
+++ b/Sunduk.PWA/Pages/Knowledge.razor
@@ -3,6 +3,7 @@
 
 
 <MudContainer MaxWidth=MaxWidth.False Class="mt-2">
+    <MudAlert Class="rounded-0" Severity="Severity.Warning" Icon="fas fa-crutch">Раздел в разработке</MudAlert>
     <MudGrid Spacing=1>
         <MudItem xs=12 sm=5 lg=4 >
             <MudField Variant="Variant.Filled" DisableUnderLine="true" Label="Содержание" InnerPadding="false">
