--- a/Sunduk.PWA/Pages/Sunducam.razor
+++ b/Sunduk.PWA/Pages/Sunducam.razor
@@ -2,8 +2,8 @@
 @inject IDialogService DialogService
 @inject Blazored.LocalStorage.ILocalStorageService localStorage
 @using MudBlazor.Services
-
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-3">
+    <MudAlert Class="rounded-0" Severity="Severity.Warning" Icon="fas fa-crutch">Раздел в разработке</MudAlert>
     <MudGrid Spacing=1>
         <MudItem xs="12">
             <MudExpansionPanel HideIcon="true">
