--- a/Sunduk.PWA/Pages/TimeCalc.razor
+++ b/Sunduk.PWA/Pages/TimeCalc.razor
@@ -1,5 +1,6 @@
 ﻿@page "/timecalc"
 
+<MudAlert Class="rounded-0" Severity="Severity.Warning" Icon="fas fa-crutch">Раздел в разработке</MudAlert>
 <MudSwipeArea OnSwipe="@OnSwipe">
     <MudTabs Elevation="2" @ref="tabs">
         <MudTabPanel Text="Распиловка">
