--- a/Sunduk.PWA/Dialogs/ChangelogDialog.razor
+++ b/Sunduk.PWA/Dialogs/ChangelogDialog.razor
@@ -68,8 +68,8 @@ https://github.com/dece1ver/Sunduk
         Info.Add(new ChangelogInfo(new Version(1, 0, 3, 5), new DateTime(2021, 10, 12), new string[] { 
             "Добавил трапецеидальную резьбу по ГОСТ 24737-81.",
             "Добавил коническую резьбу по ГОСТ 6111-52.",
-            "Во всякую хрень добавил глубины центровых отверстий по ГОСТ 14034-74",
-            "Изменил цветовую схему"
+            "Во всякую хрень добавил глубины центровых отверстий по ГОСТ 14034-74.",
+            "Изменил цветовую схему."
         }));
         Info.Add(new ChangelogInfo(new Version(1, 0, 3, 6), new DateTime(2021, 12, 14), new string[] { 
             "Переписал фаску и радиус, добавил обратные варианты. На фаске добавил точный расчет."}));
