фикс для релизной версии

--- a/Sunduk.PWA/Shared/MainLayout.razor
+++ b/Sunduk.PWA/Shared/MainLayout.razor
@@ -47,7 +47,7 @@
 {
     string version = System.Reflection.Assembly.GetExecutingAssembly().GetName().Version.ToString();
 
-    public bool ExperimentalMode { get; set; } = true;
+    public bool ExperimentalMode { get; set; } = false;
 
     bool _drawerOpen = true;
 
