--- a/Sunduk.PWA/_Imports.razor
+++ b/Sunduk.PWA/_Imports.razor
@@ -15,6 +15,9 @@
 @using Sunduk.PWA
 @using Sunduk.PWA.Shared
 @using Sunduk.PWA.Components
+@using Sunduk.PWA.Components.CAM
+@using Sunduk.PWA.Components.Stuff
+@using Sunduk.PWA.Components.Knowledge
 @using Sunduk.PWA.Util
 @using Sunduk.PWA.Dialogs
 @using Sunduk.PWA.Infrastructure
